--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   cloud_firestore: ^5.6.7
   cached_network_image: ^3.4.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
